# ssl_auth

./: .gitignore  CMakeLists.txt  client.cpp  logging.h  server.cpp
authentication/: CMakeLists.txt  udaClientSSL.cpp  udaClientSSL.h  udaServerSSL.cpp  udaServerSSL.h
